V0.8.17
---------
 * Added a key for drawing adjacent menu and tool bars as a whole.

V0.8.16
---------
 * A new key for drawng spin indicators vertically inside the spin line-edit.
 * The left (or right for RTL) text margin of menuitems also includes their checkboxes and radiobuttons now.
 * Removed the 2-px frame thickness limit from menus and tooltips without compositing.
 * Allow different thicknesses for horizontal and vertical menu frames.
 * Added a hacking variable for drawing KDE capacity bars as progressbars.
 * Fixed Konsole's color scheme editing dialog.
 * Set PM_LargeIconSize and PM_IconViewIconSize to the KDE value for dialog icon size.
 * Prevent drawing pushbuttons as toolbuttons (as in QupZilla and KNotes).
 * Don't draw the interior and frame of sizegrip if its window has a custom background color (as in KNotes).
 * Don't draw the interior of a window with custom background color (as in KNotes).

V0.8.15
---------
 * Added the possibility of having high contrast between the colors of buttons, toolbars and menubars, on the one hand, and generic containers, on the other hand.
 * Fixed the text color of K3b's location bar when there's a high contrast between the window and toolbar text colors.
 * Yet another workaround when there isn't enough space for icon-only toolbuttons with menu.
 * Added optional floating tabs (see Theme-Making.pdf).
 * Workaround for lack of space in spinboxes.
 * Don't give the button text colors to those plasma toolbuttons that pretend to have only icons but have texts.
 * Use Plasma foreground color for Plasma toolbutton text.
 * Set limits on lineedit frame size when needed.
 * Set limits on pushbutton sizes inside a view-item.
 * A better criterion for deciding if a widget belongs to Plasma.
 * Force the (push and tool) button text colors.
 * Don't set the text color of Plasma menu titles to that of their menus when they aren't transparent.
 * Use gray values of colors for checking their contrast.